[package]
name = "pingx"
version = "0.1.9"
edition = "2024"
authors     = ["Seamile <lanhuermao@gmail.com>"]
license     = "MIT"
description = "A efficient network diagnostic tool to replace system ping/ping6, supporting multi-target concurrent probing via ICMP, TCP, and HTTP."
homepage    = "https://github.com/seamile/pingx"
repository  = "https://github.com/seamile/pingx"
keywords    = ["ping", "tcp-ping", "http-ping", "cli", "network"]
categories  = ["command-line-utilities"]
readme      = "README.md"

[[bin]]
name = "pingx"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["rustls"], default-features = false }
anyhow = "1.0.100"
thiserror = "2.0.17"
async-trait = "0.1.89"
futures = "0.3.31"
socket2 = { version = "0.6.1", features = ["all"] }
bytes = "1.11.0"
colored = "3.0.0"
parking_lot = "0.12.5"
libc = "0.2.180"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
